# AUDIOLAB-Virtual-Soundcheck-for-WING-Reaper

./: .gitignore  AGENTS.md  CMakeLists.txt  INSTALL.md  LICENSE  MIDI_ACTIONS_REFERENCE.md  OSC_REFERENCE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  build.bat  build.sh  config.json  create_installer_pkg.sh  deploy.sh  install.bat  install.sh  install_macos.sh  monitor_wing_midi.py  setup_dependencies.sh
.project/: PROJECT_CONTEXT.md  README.md  github-project-config.json  project-helper-config.json
docs/: ARCHITECTURE.md  CC_BUTTONS_AND_AUTO_TRIGGER.md  ISSUE_13_EXISTING_PROJECT_SOUNDCHECK_INTAKE.md  ISSUE_13_RECORDING_VIRTUAL_SOUNDCHECK_READINESS.md  ISSUE_14_SELECTED_CHANNEL_BRIDGE_IMPLEMENTATION_PROPOSAL.md  ISSUE_16_EXISTING_REAPER_PROJECT_ADOPTION_INTAKE.md  ISSUE_16_EXISTING_REAPER_PROJECT_ADOPTION_PROPOSAL.md  ISSUE_16_MANUAL_MAPPING_AND_ORDERING_INTAKE.md  ISSUE_16_MANUAL_MAPPING_AND_ROUTING_PROPOSAL.md  ISSUE_16_PHASE3_ADOPT_IN_PLACE_DECISION_MEMO.md  README.md  USER_GUIDE.md  WING_OSC_PROTOCOL.md  WING_SELECTED_CHANNEL_BRIDGE.md  WING_SELECTED_CHANNEL_SUPERRACK_BRIDGE_PLAN_VALIDATION.md
include/: reaper_extension.h  track_manager.h  wing_config.h  wing_connector_dialog_macos.h
packaging/: create_installer_linux.sh  create_installer_macos.sh  create_installer_windows.ps1
releases/: AUDIOLAB-Virtual-Soundcheck-v1.2.0.0-daily-20260330-macOS.pkg  README.md
scripts/: validate_docs.py
snapshots/: README.md  wing-control-buttons-PLACEHOLDER.txt
tests/: CMakeLists.txt  adoption_plan_tests.cpp  osc_address_probe.cpp  osc_builder_tests.cpp  osc_probe.cpp  osc_write_tool.cpp  playback_allocator_tests.cpp  playback_naming_tests.cpp  soundcheck_state_tests.cpp  source_input_mode_plan_tests.cpp  source_monitor_tests.cpp  stereo_channel_plan_tests.cpp  wing_config_tests.cpp
(+42 files in other folders)
